--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "10.lib.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "nodemon": "^2.0.7"
