--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.12",
     "nodemon": "^2.0.7",
     "ws": "^7.4.2"
   },
