--- a/cms-project/package.json
+++ b/cms-project/package.json
@@ -13,5 +13,8 @@
         "nodejs"
     ],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1"
+    }
 }
