--- a/cms-project/package.json
+++ b/cms-project/package.json
@@ -15,6 +15,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "express-handlebars": "^5.2.0",
+        "path": "^0.12.7"
     }
 }
