--- a/cms-project/package.json
+++ b/cms-project/package.json
@@ -15,8 +15,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
+        "mongoose": "^5.11.13",
         "path": "^0.12.7"
     }
 }
